wp-content/themes/ant-preserved/assets/inline-01.css
/* ... */
._header_hf6hk_1 {
    position: relative;
    z-index: 10
}

._header_hf6hk_1:after {
    background-color: #e8e8e8;
    content: "";
    position: absolute;
    left: 50%;
    bottom: -1px;
    transform: translate(-50%);
    height: 1px;
    width: 100vw;
    z-index: -1
}

._top_hf6hk_17 {
    color: #6f7073;
    display: flex;
    align-items: center;
    gap: 32px;
    font-size: 15px;
    font-weight: 500;
    line-height: 24px;
    padding: 12px 0;
    position: relative
}

._top_hf6hk_17:before {
    background-color: #f7f9ff;
    content: "";
    position: absolute;
    left: 50%;
    transform: translate(-50%);
    height: 100%;
    width: 100vw;
    z-index: -1
}

._top_hf6hk_17 a {
    white-space: nowrap;
    transition: color .2s ease 0s
}

@media screen and (any-hover: hover) {
    ._top_hf6hk_17 a:hover {
        color:#2955d9
    }
}

._top_hf6hk_17>*:first-child {
    margin-right: auto
}

._main_hf6hk_51 {
    display: flex;
    align-items: center;
    gap: 32px;
    padding: 24px 0
}

._main_hf6hk_51>*:last-child {
    margin-left: auto
}

._actions_hf6hk_61 {
    display: flex;
    align-items: center;
    gap: 12px
}

._iconButton_hf6hk_67 {
    background-color: #f7f9ff;
    border-radius: 12px;
    padding: 12px;
    transition: color .2s ease 0s
}

._iconButton_hf6hk_67 svg {
    vertical-align: top
}

@media screen and (any-hover: hover) {
    ._iconButton_hf6hk_67:hover {
        color:#2955d9
    }
}

._loginButton_hf6hk_82 span {
    white-space: nowrap
}

._contactUsFormContent_hf6hk_86 {
    max-width: 660px
}

.burger {
    background-color: #f7f9ff;
    border-radius: 12px;
    flex-shrink: 0;
    position: relative;
    width: 48px;
    height: 48px
}

.burger span {
    background-color: #0d0e11;
    border-radius: 20px;
    position: absolute;
    left: 14px;
    width: 20px;
    height: 2px
}

.burger span:nth-child(2) {
    top: calc(50% - 1px)
}

@media (min-width: 860.2px) and (max-width: 1280px) {
    ._loginButton_hf6hk_82 {
        padding-left:12px;
        padding-right: 12px
    }

    ._loginButton_hf6hk_82 span {
        display: none
    }

    ._main_hf6hk_51 {
        gap: 24px
    }
}

@media (max-width: 1024px) {
    ._main_hf6hk_51 {
        position:relative
    }

    ._main_hf6hk_51:before {
        background-color: #fff;
        content: "";
        position: absolute;
        top: 0;
        left: -20px;
        width: calc(100% + 40px);
        height: 100%;
        z-index: -1
    }

    ._iconButton_hf6hk_67 {
        display: none
    }
}

@media (max-width: 860px) {
    ._top_hf6hk_17 {
        gap:24px;
        padding-top: 12px
    }
}

@media (max-width: 600px) {
    ._loginButton_hf6hk_82 {
        display:none
    }
}

@media (max-width: 480px) {
    ._top_hf6hk_17 {
        font-size:13px;
        font-weight: 500;
        line-height: 20px;
        gap: 2px 16px;
        flex-wrap: wrap
    }

    ._languages_hf6hk_159 {
        justify-content: flex-end;
        flex-basis: 100%;
        order: -1
    }

    ._main_hf6hk_51 {
        padding-top: 16px;
        padding-bottom: 16px
    }

    ._main_hf6hk_51:before {
        left: -16px;
        width: calc(100% + 32px)
    }

    ._logo_hf6hk_172 img {
        width: auto;
        height: 38px
    }

    .burger {
        width: 44px;
        height: 44px
    }

    .burger span {
        left: 12px
    }
}

._stores_huq58_1 {
    display: flex;
    gap: 24px
}

@media (max-width: 480px) {
    ._stores_huq58_1 img {
        height:40px
    }
}

@keyframes react-loading-skeleton {
    to {
        transform: translate(100%)
    }
}

.react-loading-skeleton {
    --base-color: #ebebeb;
    --highlight-color: #f5f5f5;
    --animation-duration: 1.5s;
    --animation-direction: normal;
    --pseudo-element-display: block;
    background-color: var(--base-color);
    width: 100%;
    border-radius: .25rem;
    display: inline-flex;
    line-height: 1;
    position: relative;
    -webkit-user-select: none;
    user-select: none;
    overflow: hidden
}

.react-loading-skeleton:after {
    content: " ";
    display: var(--pseudo-element-display);
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    height: 100%;
    background-repeat: no-repeat;
    background-image: var( --custom-highlight-background, linear-gradient( 90deg, var(--base-color) 0%, var(--highlight-color) 50%, var(--base-color) 100% ) );
    transform: translate(-100%);
    animation-name: react-loading-skeleton;
    animation-direction: var(--animation-direction);
    animation-duration: var(--animation-duration);
    animation-timing-function: ease-in-out;
    animation-iteration-count: infinite
}

@media (prefers-reduced-motion) {
    .react-loading-skeleton {
        --pseudo-element-display: none
    }
}

._footer_17w3r_1 {
    padding: 48px 0;
    position: relative
}

._footer_17w3r_1:before {
    background-color: #f7f9ff;
    content: "";
    position: absolute;
    top: 0;
    left: 50%;
    width: 100vw;
    height: 100%;
    transform: translate(-50%);
    z-index: -1
}

._footerTop_17w3r_17 {
    background-color: #fff;
    border-radius: 20px;
    display: flex;
    justify-content: space-between;
    align-items: center;
    gap: 24px 32px;
    padding: 24px
}

._footerTop_17w3r_17:not(:last-child) {
    margin: 0 0 48px
}

._contacts_17w3r_30 {
    display: flex;
    justify-content: space-between;
    gap: 12px;
    flex-basis: 386px
}

._contact_17w3r_30 {
    display: flex;
    flex-direction: column
}

._contactTitle_17w3r_42 {
    font-size: 15px;
    font-weight: 500;
    line-height: 24px
}

._contactLink_17w3r_48 {
    color: #00008e;
    font-size: 20px;
    font-weight: 700;
    line-height: 24px;
    transition: color .2s ease 0s
}

@media screen and (any-hover: hover) {
    ._contactLink_17w3r_48:hover {
        color:#2955d9
    }
}

._actions_17w3r_61 {
    display: flex;
    gap: 12px
}
/* ... */

